# references

./: .gitignore  README.md  chapters  cmake.md  docker.md  documentation.md  errors.md  installations.md  linux_commands.md  opencv.md  serial.md
_site/: 404.html  data_manipulation.md  docker.md  ffmpeg.md  git.md  markdown.md  tmux.md  vim.md
_site/docs/: README.html
_site/docs/chapters/: 01-1.html  01-2.html  01.html  02.html  epilogue.html  prologue.html  prologue2.html
_site/docs/zh/: 01-1.html  01-2.html  01.html  02.html  index.html
_site/opencv_files/: version.cpp
_site/opencv_files/read_yaml/: CMakeLists.txt  read_yaml_opencv.cpp
_site/resources/: resources.md
_site/serial_and_IO/USB-CAN_radar_parser/: CMakeLists.txt  readme.txt
docs/: README.md  _config.yml
docs/_site/: 404.html  index.html
docs/_site/zh/: index.html
docs/chapters/: boost.md
docs/chapters/Linux/: cmake.md  docker.md  ffmpeg.md  git.md  linux_commands.md  title_linux_folder.md  tmux.md  vim.md  vscode.md
docs/chapters/extras/: documentation.md  errors.md  gdive.md  gps.md  installations.md  markdown.md  title_extras_folder.md
docs/chapters/python_cpp/: cpp.md  cuda.md  data_manipulation.md  keras.md  numpy.md  opencv.md  python.md  (+5 more)
opencv_files/: imshow.cpp  readSpeedExtractFrames.cpp
opencv_files/read_yaml/: fcw_radar.yaml
resources/: model_optimization.md
serial_and_IO/USB-CAN_radar_parser/: readme.txt
serial_and_IO/serial_cpp/: CMakeLists.txt
serial_and_IO/serial_cpp/include/: icd_radar.h  serial.h
serial_and_IO/serial_cpp/src/: main.cpp  serial.cpp
(+42 files in other folders)
